--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
 	<string name="title_activity_main">Shopping Buddy</string>
 	<string name="action_settings">Settings</string>
 	<string name="hello_world">Hello world!</string>
+	<string name="main_list_title">My Lists</string>
 
 </resources>
